<resources>
<string name="yes">"Yes"</string>
<string name="no">"No"</string>
<string name="cancel">"Cancel"</string>
<string name="score">"Score"</string>
<string name="title_id">"ID"</string>
<string name="title_name">"Name"</string>
<string name="good">"Good"</string>
<string name="fair">"Fair"</string>
<string name="poor">"Poor"</string>
<string name="lorem_ipsum">"Lorem ipsum dolor sit amet"</string>
<string name="settings_menu_about">"About"</string>
<string name="settings_menu_configuration">"Settings"</string>
<string name="settings_menu_licence">"License"</string>
<string name="settings_menu_learning_center">"HNQIS learning center"</string>
<string name="settings_menu_submit_ticket">"Submit a ticket"</string>
<string name="settings_menu_logout">"Logout"</string>
<string name="dialog_title_delete_survey">"Delete Survey"</string>
<string name="dialog_info_delete_survey">"Are you sure you want to completely delete the survey: %s?"</string>
<string name="dialog_title_missing_selection">"Missing selection"</string>
<string name="dialog_content_missing_selection">"Please select Org Unit and Survey details"</string>
<string name="dialog_title_existing_survey">"Existing Survey"</string>
<string name="dialog_content_existing_survey">"There is already a not sent form in the system for that Org Unit/Survey"</string>
<string name="dialog_title_incorrect_org_unit">"Incorrect Org Unit"</string>
<string name="dialog_content_incorrect_org_unit">"Please select a final org unit"</string>
<string name="dialog_content_logout_confirmation">"If you exit the system, all the not sent data will be deleted. Do you still want to exit?"</string>
<string name="dialog_info_ask_for_completion">Are you sure you want to complete %s? You cannot undo this action</string>
<string name="dialog_info_ask_for_completion_plan">Are you sure you want to complete plan? You cannot undo this action</string>
<string name="dashboard_info_feedback">"Feedback"</string>
<string name="dashboard_info_ready_to_upload">"Ready to upload"</string>
<string name="dashboard_info_sent">"Sent"</string>
<string name="create_info_ok">"Start"</string>
<string name="create_info_organization_unit">"Organisation Unit"</string>
<string name="create_info_survey">"Survey"</string>
<string name="create_info_tabs_group">"Tab Group"</string>
<string name="assessment_title_facility_date">"Facility / Survey"</string>
<string name="assessment_title_overall_mandatory_completed">"Overall / Mandatory completed"</string>
<string name="assessment_sent_date">"Comp date"</string>
<string name="assessment_title_header">"Active Survey(s)"</string>
<string name="assessment_sent_title_header">"Previous Survey(s)"</string>
<string name="survey_title_exit">"Really Exit?"</string>
<string name="survey_info_exit">"Are you sure you want to exit?"</string>
<string name="widget_info_empty_statement">"Question statement"</string>
<string name="custom_title_tallies">"TALLIES - Add up and enter the totals for the following indicators from the registers in column A.  In column B enter the total numbers from the monthly reporting sheet"</string>
<string name="custom_info_tallies">"TALLIES for the Month of"</string>
<string name="adherence_info_switchquestion">"Are there laboratory registers and pharmacy or clinical registers available at this facility?"</string>
<string name="adherence_title_explanation">"Evaluation of Provider Adherence to Malaria Diagnostic Test Results"</string>
<string name="adherence_title_explanation_content">"Step 1. Record below the patient ID numbers of 20 patients prescribed ACTs from the Pharmacy Register.
Step 2. Locate the patient IDs from Step 1 in the Laboratory and/or Clinical Registers and record their test result in the appropriate column. "</string>
<string name="adherence_title2_explanation_content">"Step 1. In the Laboratory Register, record the patient ID numbers 20 patients: 5 RDT +; 5 RDT -; 5 microscopy +; 5 microscopy -.
Step 2. Locate the patient IDs from Step 1 in the Pharmacy Register and record whether they received ACTs in the “ACT Prescribed” column by ticking either Y or N."</string>
<string name="adherence_title_gender">"Gender"</string>
<string name="adherence_title_age">"Age (years)"</string>
<string name="adherence_title_test_results">"Test results"</string>
<string name="adherence_info_patient_id">"Patient
ID"</string>
<string name="adherence_info_prescribed">"ACT
Prescribed?"</string>
<string name="adherence_info_rdt_positive">"RDT Positive"</string>
<string name="reporting_info_reporting">"Reporting"</string>
<string name="reporting_info_results">"Results"</string>
<string name="reporting_info_register">"Register"</string>
<string name="reporting_info_monthly">"Monthly
Report"</string>
<string name="score_title_clinical_fever">"Clinical
fever
evaluation"</string>
<string name="score_title_rdt">"RDT"</string>
<string name="score_title_avg">"AVG"</string>
<string name="score_title_environment">"Environment"</string>
<string name="score_title_profile">"Profile"</string>
<string name="score_info_tab_score">"Score for tab:"</string>
<string name="score_info_overall">"Overall"</string>
<string name="score_info_accumulated">"Tab num/dem"</string>
<string name="score_info_case1">"Case 1"</string>
<string name="score_info_case2">"Case 2"</string>
<string name="score_info_case3">"Case 3"</string>
<string name="compscore_title_score_percentage">"Score (%)"</string>
<string name="title_activity_settings">"Settings"</string>
<string name="settings_checkbox_customize_fonts">"Customize fonts?"</string>
<string name="settings_list_font_sizes">"Fonts size"</string>
<string name="settings_text_dhis_server_url">"DHIS Server URL"</string>
<string name="settings_text_dhis_user">"DHIS user"</string>
<string name="pref_header_general">"General"</string>
<string name="dialog_info_push_bad_credentials">"Bad credentials for pushing"</string>
<string name="dialog_info_push_empty_survey">"Empty surveys cannot be pushed"</string>
<string name="settings_menu_legal">"Legal"</string>
<string name="settings_menu_copyright">"Copyright"</string>
<string name="settings_menu_licenses">"Software licenses"</string>
<string name="settings_menu_eula">"EULA"</string>
<string name="go_to_feedback">"Go to feedback"</string>
<string name="dialog_button_preview_feedback">"View Feedback"</string>
<string name="dialog_question_complete_survey">"All compulsory questions were completed. Would you like to mark this survey as completed?"</string>
<string name="dialog_continue_later_option">"Continue Later"</string>
<string name="dialog_complete_option">"Complete"</string>
<string name="dialog_are_you_sure_complete_survey">"Are you sure? This action cannot be undone and you will no longer be able to edit or delete this survey"</string>
<string name="dialog_incompleted_compulsory_survey">"This survey cannot be sent yet. Please answer at least all the compulsory questions"</string>
<string name="dialog_incompleted_compulsory_pulling">"Metadata refresh require delete or complete your unsent data. Please answer at least all the compulsory questions"</string>
<string name="dialog_sent_survey_on_refresh_metadata">"Metadata refresh will delete your unsent data. You have %s unsent surveys. Do you to push them before refresh?"</string>
<string name="cancellingPull">"The process will be stopped in a few seconds "</string>
<string name="dashboard_title_total_assessments">"Total number of surveys undertaken"</string>
<string name="dashboard_title_planned_type_never">"Never assessed"</string>
<string name="dashboard_title_planned_type_overdue">"Overdue"</string>
<string name="dashboard_title_planned_type_next_30">"Next 30 days"</string>
<string name="dashboard_title_planned_type_future">"Future"</string>
<string name="dashboard_title_planned_productivity_abreviation">"Prd"</string>
<string name="dashboard_title_planned_productivity">"Productivity"</string>
<string name="competency_title">"Competency"</string>
<string name="dashboard_title_planned_next_qa">"Next QA"</string>
<string name="assessment_sent_competency">"Competency"</string>
<string name="feedback_show_only_failed">"Show only failed questions"</string>
<string name="feedback_show_only_media">"Show only questions containing video/image"</string>
<string name="feedback_show_only_one_or_show_all">"Show only last feedback"</string>
<string name="feedback_return">"Return to all surveys"</string>
<string name="quality_of_care">"QUALITY OF CARE (QoC) SCORE:"</string>
<string name="overall_quality_of_care">"QoC"</string>
<string name="feedback_info_passed">"Pass"</string>
<string name="feedback_info_failed">"Fail"</string>
<string name="feedback_info_not_answered">"Na"</string>
<string name="feedback_info_no_feedback">"No feedback"</string>
<string name="feedback_info_conflict">"Conflict"</string>
<string name="settings_checkbox_location_required">"Location required"</string>
<string name="settings_checkbox_description_location_required">"When activated, location is a required field for pushing data to dhis server"</string>
<string name="font_size_level0_title">"Extra small"</string>
<string name="font_size_level1_title">"Small"</string>
<string name="font_size_level2_title">"Medium"</string>
<string name="font_size_level3_title">"Large"</string>
<string name="font_size_level4_title">"Extra large"</string>
<string name="server_url">"DHIS2 server"</string>
<string name="settings_text_dhis_password">"DHIS password"</string>
<string name="settings_text_dhis_max_items">"DHIS max loaded surveys"</string>
<string name="settings_monitoring_target">"Monitoring target"</string>
<string name="dialog_error_push_uids">"Incorrect UIDs found in push"</string>
<string name="dialog_error_push_no_location_and_required">"No location available and it is a required field"</string>
<string name="dialog_error_attribute_null">\"Attribute with id %s null, please contact your server admin.\"</string>
<string name="dialog_info_push_imported">"Imported"</string>
<string name="dialog_info_push_updated">"Updated"</string>
<string name="dialog_info_push_ignored">"Ignored"</string>
<string name="dialog_info_push_stats">"Survey data pushed to server. Results:"</string>
<string name="dialog_info_on_complete">"The survey %s has been marked as completed. You'll find it now in the Improve tab"</string>
<string name="dialog_deleting_children">"You're about to delete the answer for questions that depend on this one. Do you really want to continue?"</string>
<string name="dashboard_tip_pie_chart">"Quality of care (based on the last survey)"</string>
<string name="dialog_pull_error">"Error while trying to pull metadata from dhis server"</string>
<string name="settings_menu_pull">"Refresh metadata"</string>
<string name="dialog_pull_success">"Dhis metadata successfully pulled from server"</string>
<string name="dialog_title_pull_response">"Pull status"</string>
<string name="dialog_demo_pull_success">"Dhis metadata successfully loaded from local data"</string>
<string name="progress_pull_connecting">"Connecting to DHIS server..."</string>
<string name="progress_pull_downloading">"Refreshing metadata (this might take a few minutes) ..."</string>
<string name="progress_pull_preparing_program">"Loading programs ..."</string>
<string name="option_edit">"Edit"</string>
<string name="option_delete">"Delete"</string>
<string name="export_data_option_title">Export database</string>
<string name="import_data_option_title">"Import database"</string>
<string name="downloaded_media_menu">"Downloaded media"</string>
<string name="dialog_pie_chart_label_explanation">"The outer circle shows you the overall completion.\n\nThe inner circle shows you the completion of mandatory questions, normally marked with an *. Only when 100% of the mandatory questions are completed, you can 'Mark Complete'"</string>
<string name="mark_complete">"Mark complete"</string>
<string name="mandatory">Mandatory</string>
<string name="dialog_action_plan">Action plan</string>
</resources>