<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    <RelativeLayout
    style="@style/EyeSeeDialogContainer">

    <org.eyeseetea.malariacare.views.CustomButton
        android:id="@+id/view"
        style="@style/EyeSeeDialogButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/dialog_button_preview_feedback" />

    <org.eyeseetea.malariacare.views.CustomButton
        android:id="@+id/action_plan"
        style="@style/EyeSeeDialogButton"
        android:layout_below="@id/view"
        android:text="@string/dialog_action_plan" />

    <org.eyeseetea.malariacare.views.CustomButton
        android:id="@+id/cancel"
        style="@style/EyeSeeDialogCancelButton"
        android:layout_below="@id/action_plan"
        android:text="@string/cancel" />
</RelativeLayout>
</FrameLayout>