<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/EyeSeeDialogContainer">

        <RelativeLayout
            android:id="@+id/chart_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp">

            <org.eyeseetea.malariacare.views.DoublePieChart
                android:id="@+id/pie_chart"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_alignParentLeft="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-48dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/pie_chart"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/overall_point_line_label_container"
                        layout="@layout/point_line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/overall_point_line_label_container"
                        android:layout_centerVertical="true" />

                    <LinearLayout
                        android:id="@+id/overall_label_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/overall_point_line_label_container"
                        android:layout_toRightOf="@id/overall_point_line_label_container"
                        android:gravity="center"
                        android:orientation="vertical">

                        <org.eyeseetea.malariacare.views.CustomTextView
                            android:id="@+id/overall_percent"
                            app:font_name="@string/font_name_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="80%"
                            android:textColor="@color/black"
                            android:textSize="28sp" />

                        <org.eyeseetea.malariacare.views.CustomTextView
                            app:font_name="@string/font_name_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/score_info_overall"
                            android:textSize="12sp" />
                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/mandatory_point_line_label_container"
                        layout="@layout/point_line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/mandatory_point_line_label_container"
                        android:layout_centerVertical="true" />

                    <LinearLayout
                        android:id="@+id/mandatory_label_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/mandatory_point_line_label_container"
                        android:layout_toRightOf="@id/mandatory_point_line_label_container"
                        android:gravity="center"
                        android:orientation="vertical">

                        <org.eyeseetea.malariacare.views.CustomTextView
                            android:id="@+id/mandatory_percent"
                            app:font_name="@string/font_name_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100%"
                            android:textColor="@color/black"
                            android:textSize="28sp" />

                        <org.eyeseetea.malariacare.views.CustomTextView
                            app:font_name="@string/font_name_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mandatory"
                            android:textSize="12sp" />
                    </LinearLayout>


                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <org.eyeseetea.malariacare.views.CustomTextView
            android:id="@+id/body_text"
            app:font_name="@string/font_name_medium"
            tools:text="@string/dialog_pie_chart_label_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chart_container"
            android:layout_margin="@dimen/buttons_margin"
            android:layout_marginTop="@dimen/buttons_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/body_text_size" />

        <org.eyeseetea.malariacare.views.CustomButton
            android:id="@+id/edit"
            style="@style/EyeSeeDialogButton"
            android:layout_below="@id/body_text"
            android:text="@string/option_edit" />

        <org.eyeseetea.malariacare.views.CustomButton
            android:id="@+id/mark_completed"
            style="@style/EyeSeeDialogButton"
            android:layout_below="@id/edit"
            android:text="@string/mark_complete" />

        <org.eyeseetea.malariacare.views.CustomButton
            android:id="@+id/delete"
            style="@style/EyeSeeDialogButton"
            android:layout_below="@id/mark_completed"
            android:text="@string/option_delete" />

        <org.eyeseetea.malariacare.views.CustomButton
            android:id="@+id/cancel"
            style="@style/EyeSeeDialogCancelButton"
            android:layout_below="@id/delete"
            android:text="@string/cancel" />
    </RelativeLayout>
</FrameLayout>